# horn

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP_TO_90_PERCENT.md  action.yml  renovate.json
.github/workflows/: ci.yml  release.yml
docs/: demo.md  index.md  package.json  pnpm-lock.yaml  vercel.json
docs/.vitepress/: config.ts
docs/.vitepress/components/: HornDemo.vue
docs/guide/: ci-cd.md  desktop-app.md  getting-started.md  output-formats.md  validating-pdfs.md  wasm.md  what-is-horn.md
docs/public/wasm/: horn_wasm.js  horn_wasm_bg.wasm
docs/reference/: checks.md  cli.md  exit-codes.md  github-action.md
horn-desktop/: README.md
horn-desktop/src/: index.html  style.css
horn-desktop/src-tauri/: Cargo.toml  tauri.conf.json
horn-desktop/src-tauri/capabilities/: default.json
horn-desktop/src-tauri/icons/: icon.icns
horn-desktop/src-tauri/src/: main.rs
horn-gui/: Cargo.toml  README.md
horn-gui/src/: main.rs
horn-gui/static/: index.html  style.css  worker.js
horn-gui/templates/: index.html  results_detail.html  results_summary.html
horn-wasm/: Cargo.toml  README.md
horn-wasm/src/: lib.rs
scripts/: sync-version.sh
src/: document.rs  lib.rs  main.rs  model.rs
src/checks/: annot_struct.rs  annotations.rs  baseline.rs  content_stream.rs  dict_entries.rs  embedded_files.rs  fonts.rs  headings.rs  images.rs  language.rs  lists.rs  math.rs  metadata.rs  mod.rs  nesting.rs  notes.rs  optional_content.rs  security.rs  structure.rs  tables.rs  version.rs  xfa.rs
src/output/: junit.rs  mod.rs  sarif.rs  text.rs
tests/: corpus.rs
tests/fixtures/: TEST_DATA.md
tests/fixtures/pdfua-reference-suite/: README.md
