[workspace]
members = [".", "horn-gui", "horn-wasm", "horn-desktop/src-tauri"]

[package]
name = "horn"
version = "0.1.0"
edition = "2024"
description = "Open-source PDF/UA accessibility checker based on the Matterhorn Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/focusring/horn"

[[bin]]
name = "horn"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:rayon",
    "dep:indicatif",
    "dep:walkdir",
    "dep:clap",
    "dep:clap_complete",
    "dep:env_logger",
    "lopdf/rayon",
    "lopdf/chrono",
    "lopdf/jiff",
    "lopdf/time",
]

[dependencies]
# PDF parsing
pdf_oxide = "0.3"
lopdf = { version = "0.39", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

# CLI-only (behind "cli" feature)
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
rayon = { version = "1", optional = true }
walkdir = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags unnecessarily
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.metadata.release]
shared-version = true
tag-prefix = "v"
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
publish = false
push-remote = "origin"
pre-release-hook = ["bash", "scripts/sync-version.sh"]

[profile.release]
lto = true
strip = true
codegen-units = 1
