[package]
name = "horn-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly build of the Horn PDF/UA accessibility checker"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
horn = { path = "..", default-features = false }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Enable JS-based RNG for getrandom (required by lopdf and pdf_oxide transitive deps)
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
